# bevy_ios_safearea

./: .gitignore  CHANGELOG.md  Package.swift  README.md  justfile
.github/workflows/: ci.yaml
Sources/bevy_ios_safearea/: bevy_ios_safearea.swift
bevy_ios_safearea/: Cargo.toml
bevy_ios_safearea/src/: android.rs  lib.rs  native.rs  plugin.rs
