[package]
name = "bevy_ios_safearea"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_safearea"
repository = "https://github.com/rustunit/bevy_ios_safearea"
keywords = ["bevy", "gamedev", "mobile", "ios", "swift"]
description = "Bevy plugin to query device safe area insets"

[package.metadata.docs.rs]
targets = [
    # macOS
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    # iOS
    "aarch64-apple-ios",
    # android
    "aarch64-linux-android",
    "armv7-linux-androideabi"
]

[dependencies]
bevy_ecs = {version = "0.16"}
bevy_app = {version = "0.16"}
bevy_reflect = {version = "0.16"}

[target.'cfg(target_os = "ios")'.dependencies]
bevy_window = {version = "0.16"}
bevy_winit = {version = "0.16"}
bevy_log = {version = "0.16"}
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_os = "android")'.dependencies]
bevy_window = {version = "0.16"}
bevy_log = {version = "0.16"}
jni = "0.21"

[lints.rust]
missing_docs = "warn"
