[package]
name = "bevy_ios_safearea"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_safearea"
repository = "https://github.com/rustunit/bevy_ios_safearea"
keywords = ["bevy", "gamedev", "mobile", "ios", "swift"]
description = "Bevy plugin to query device safe area insets"

[package.metadata.docs.rs]
targets = [
    # macOS
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    # iOS
    "aarch64-apple-ios",
]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_window",
    "bevy_winit",
    "bevy_log",
] }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[lints.rust]
missing_docs = "warn"
