[package]
name = "bevy_ios_safearea"
version = "0.5.1"
edition = "2024"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_safearea"
repository = "https://github.com/rustunit/bevy_ios_safearea"
keywords = ["bevy", "gamedev", "mobile", "ios", "swift"]
description = "Bevy plugin to query device safe area insets"

[package.metadata.docs.rs]
targets = [
    # macOS
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    # iOS
    "aarch64-apple-ios",
]

[dependencies]
bevy_ecs = { version = "0.18", default-features = false, features = ["std"] }
bevy_math = { version = "0.18", default-features = false, features = ["std"] }
bevy_app = { version = "0.18", default-features = false, features = ["std"] }
bevy_window = { version = "0.18", default-features = false }
bevy_log = { version = "0.18", default-features = false }
bevy_winit = { version = "0.18", default-features = false }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[dev-dependencies]
bevy = { version = "0.18", default-features = false }

[lints.rust]
missing_docs = "warn"
